--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.4.5"
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@types/node": "^20.11.0"
   }
 }
